ASMI/wwwroot/css/recrutari.css
.jumbotronn {
    padding: 15rem 1rem;
    background-image: url("/images/cover.jpg");
    background-position: center;
    background-size: 100%;
    background-repeat: no-repeat;
    border-radius: .3rem;
}


@keyframes moveUpDown {
    0% {
        transform: translateY(0);
    }

    50% {
        transform: translateY(-50px);
    }
    /* Move up */
    100% {
        transform: translateY(500px);
    }
    /* Move down */
}

.mario {
    background-image: url('/images/mario.png');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    width: 200px;
    height: 200px;
    display: block;
    margin: 0 auto;
    margin-bottom: -160px;
    margin-top: 30px;
    animation: alternate 1s moveUpDown;
}

.mario_tunnels {
    background-image: url('/images/mario_tunnels.png');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: 0% 100%;
    width: 400px;
    height: 400px;
    display: block;
    margin: 0 auto;
}


div ul {
    padding: 0px;
    margin-top: 0px;
}

#amr {
    padding: 0px;
    margin-bottom: 0px;
}

body {
    background-image:url('/images/bg_pagina recrutari.png');
}

html {
    scroll-behavior: smooth;
}

.flex-container {
    display: flex;
    align-items: center; 
    justify-content: center; 
    gap: 20px; 
}

.text {
    color: white;
    font-size: 24px; 
    text-align: center; 
    display: flex;
    align-items: center; 
}

.button-container {
    display: flex;
    align-items: center;
    justify-content: center; 
}


.mario-info {
    display: flex;
    justify-content: center; 
    gap: 250px;
    color: white;
    font-size: 16px;
    text-align: center; 
}

body, containerMain {
    background-color: black;
}

#asmi-navbar{
    display: none !important;
}

#navbarRecrutari {
    background-image: url(../images/headerbg.png);
    background-repeat: no-repeat;
    background-size: 100% 100%;
    -webkit-box-shadow: inset 0px 0px 133px 106px rgba(0,0,0,0.75);
    -moz-box-shadow: inset 0px 0px 133px 106px rgba(0,0,0,0.75);
    box-shadow: inset 0px 0px 133px 106px rgba(0,0,0,0.75);

    min-height: 40vh !important;

}

.pixelFont {
    font-family: "Pixelify Sans", sans-serif !important;
    font-optical-sizing: auto !important;
    /*    font-weight: <weight>;*/
    font-style: normal !important;
}

#headerRecrutari{
    font-size: 10vmin !important;

}

#navLinkList a{
    color: white;
    font-size: 2rem;
}
/*
    #navLinkList a:before {
        background-image: url("../images/beforeArrow.png");
        content:"";
        background-size: 10px 20px;
        display: inline-block;
        width: 10px;
        height: 20px;
    }*/

ul{
    list-style-type: none;
}

#pacmanAnimat {
    opacity: 50%;
    border-radius: 10%;
    max-width: 50vw;
}

#pacmanWrapper {

    background: black;
    height: fit-content;
    border-radius: 10%;
}

@media only screen and (max-width: 1140px){
    #pacmanWrapper, #pacmanWrapper > img{
        display: none;
    }
}

@media only screen and (max-width: 980px) {
    #pacmanWrapper, #pacmanWrapper > img {
        display: none;
    }

    .sm{
        display: block !important;
    }

#pamant{
    width: 100%;
}

}

.fitcontent{
    width: fit-content !important;
}

.gameBorder{
    background-image: url(../images/bordertop.png);
    height: 100px;
}

.flipBorder{
    transform: rotateX(180deg);
}

.gameBorderLeft {
    background-image: url(../images/sideBorder.png);
    width: 100px;
}

.gameBorderRight {
    background-image: url(../images/sideBorder.png);
    width: 100px;
    transform: rotateX(180deg);
}

h2 {
    color: white !important;
}

.norisorMic{
    width: 20vw;
    max-width: 10rem;
}
.norisorMare {
    width: 20vw;
    max-width: 20rem;
}

